--- a/ERPWeb/Views/AgroConfiguration/GetRequisition.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetRequisition.cshtml
@@ -21,6 +21,7 @@
                                         </h5>
                                     </div>
                                     <div class="col-md-3">
+                                        <a href="/AgroConfiguration/SaveRequisition" class="btn btn-outline-primary btn-sm float-lg-right" id="btnAddNew"><i class="fa fa-plus"></i> Requistion</a>
                                     </div>
                                 </div>
                             </div>
