--- a/ERPWeb/Views/AgroConfiguration/_GetMeasurementList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetMeasurementList.cshtml
@@ -18,22 +18,23 @@
             @foreach (var item in Model)
             {
                 sl++;
-                <tr>
-                    <td>@sl</td>
-                    <td class="hide">@item.MeasurementId</td>
-                    <td>@item.MeasurementName</td>
-                    <td>@item.MasterCarton X @item.InnerBox X @item.PackSize </td>
-                    <td class="hide">@item.MasterCarton</td>
-                    <td class="hide">@item.InnerBox</td>
-                    <td class="hide">@item.PackSize</td>
-                    <td>@item.UnitName</td>
-                    <td class="hide">@item.UnitId</td>
-                    <td>@item.Status</td>
-                    <td>
-                        <a href="#"  class="btn btn-warning btn-sm data-edit-item-measurement" data-edit-item-measurement="@item.MeasurementId"><i class="fa fa-pen"></i>Edit</a>
-                    </td>
+            <tr>
+                <td>@sl</td>
+                <td class="hide">@item.MeasurementId</td>
+                <td>@item.MeasurementName</td>
+                <td>@item.MasterCarton X @item.InnerBox X @item.PackSize </td>
+                <td class="hide">@item.MasterCarton</td>
+                <td class="hide">@item.InnerBox</td>
+                <td class="hide">@item.PackSize</td>
+                <td>@item.UnitName</td>
+                <td class="hide">@item.UnitId</td>
+                <td>@item.Status</td>
+                <td class="hide">@item.UnitKG</td>
+                <td>
+                    <a href="#" class="btn btn-warning btn-sm data-edit-item-measurement" data-edit-item-measurement="@item.MeasurementId"><i class="fa fa-pen"></i>Edit</a>
+                </td>
 
-                </tr>
+            </tr>
 
             }
 
