--- a/ERPWeb/Views/AgroConfiguration/GetRequisition.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetRequisition.cshtml
@@ -33,11 +33,22 @@
                         <div class="card shadow card-navy">
                             <div class="card-body text-sm">
                                 <div class="row text-sm">
-                                    <div class="col-md-4">
+                                    <div class="col-md-3">
                                         <label for="txtReqCode" class="control-label font-weight-bold">Requisition Code</label>
                                         <input type="text" name="search" id="txtReqCode" class="form-control form-control-sm" placeholder="Search By Requisition Code" onkeyup="tableFilter('#tblReqInfoData tbody tr',this)" />
                                     </div>
-                                    <div class="col-md-4">
+                                    <div class="col-md-3">
+                                        <label for="txtReqCode" class="control-label font-weight-bold">Status</label>
+                                        <select class="form-control form-control-sm" id="ddlStatus">
+                                            <option value="">--Select--</option>
+                                            <option value="Pending">Pending</option>
+                                            <option value="Send">Pending</option>
+                                            <option value="Accept">Accept</option>
+
+                                        </select>
+
+                                    </div>
+                                    <div class="col-md-3">
                                         <label class="control-label font-weight-bold">From Date</label>
                                         <div class="input-group input-group-sm ">
                                             <input type="text" class="form-control form-control-sm date-datePicker ctrl-changed" id="dptFromDate" />
@@ -46,7 +57,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-md-4">
+                                    <div class="col-md-3">
                                         <label class="control-label font-weight-bold">To Date</label>
                                         <div class="input-group input-group-sm ">
                                             <input type="text" class="form-control form-control-sm date-datePicker ctrl-changed" id="dptToDate" />
@@ -63,7 +74,7 @@
                                 <div class="card-body">
                                     <div class="row">
                                         <div class="col-md-12 text-sm" id="dataContainer">
-                                            @*@{Html.RenderAction("");}*@
+                                            @{Html.RenderAction("GetRequisition",new {flag="List" });}
                                         </div>
                                     </div>
                                 </div>
@@ -82,9 +93,7 @@
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header alert-secondary" style="height:60px">
-                    @Html.AntiForgeryToken()
-                    <input type="hidden" id="hdfRequsitionDetailId" />
-                    <input type="hidden" id="hdfRowIndex" />
+ 
                     <h4 id="modalHeading" class="modal-title">
                         Requsition  Details
                     </h4>
@@ -103,6 +112,8 @@
 
         var dptFromDate = $("#dptFromDate");
         var dptToDate = $("#dptToDate");
+        var ddlStatus = $("#ddlStatus");
+        var txtReqCode = $("txtReqCode");
         $(document).ready(function () {
 
             //Initialize Select2 Elements
@@ -148,9 +159,37 @@
 
 
         function ModalOpen() {
+            alert("In Modal");
             $("#modalRequsition").Modal("show")
 
         }
+        $(document).on("click", "a.data-item-Details", function (e) {
+            e.preventDefault();
+
+            alert("here me");
+            $("#dataContainer2").empty();
+
+            var infoId = $(this).attr('data-item-Details');
+
+            
+
+            var data = { flag: "Details", infoId: infoId };
+            $.when(getReqWithData('html', 'GET', '/AgroConfiguration/GetRequisition', data)).then(function (res, status) {
+                console.log(status);
+                if (status === "success") {
+                    $("#dataContainer2").empty();
+                    $("#dataContainer2").append(res);
+                    $("#modalRequsition").modal('show');
+                }
+            }).fail(function (error) {
+                console.log(error);
+            })
+
+
+
+        })
+
+        
 
     </script>
 
