--- a/ERPWeb/Views/AgroConfiguration/SaveRequisition.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/SaveRequisition.cshtml
@@ -35,19 +35,19 @@
                     </div>
 
                     <div class="col-md-2">
-                        <label for="ddlUnitName">Unit</label>
-                        <input type="text" id="ddlUnitName" name="ddlUnitName" class="form-control form-control-sm" readonly />
+                        <label for="unitName">Unit</label>
+                        <input type="text" id="txtUnitName" name="unitName" class="form-control form-control-sm" readonly />
                     </div>
                     <div class="hide">
-                        <label for="ddlUnitID">UnitID</label>
-                        <input type="text" id="ddlUnitID" name="ddlUnitID" class="form-control form-control-sm" readonly />
+                        <label for="unitID">UnitID</label>
+                        <input type="text" id="hdUnitId" name="unitID" class="form-control form-control-sm" readonly />
                     </div>
 
                     <div class="col-md-2">
-                        <label for="ddlqty">Requisition Qty</label>
-                        <input type="number" id="ddlqty" name="qty" class="form-control form-control-sm" />
+                        <label for="requistionQuantity">Requisition Qty</label>
+                        <input type="number" id="numRequisitonQuantity" name="requistionQuantity" class="form-control form-control-sm" />
                         <span class="error hide req-qty">Qty Is Required</span>
-                        <span>Stock: <span id="RawMaterialStockQty">0</span> </span>
+                        <span id="spanRawMaterialStockQty">Stock: <span id="RawMaterialStockQty">0</span> </span>
                         <span class="error hide req-qtyChecking">Quantity Must be less than or equal material Qty</span>
                     </div>
 
@@ -107,12 +107,11 @@
 
         var ddlRawMaterial = $("#ddlRawMaterial");
         var hdrawMaterialRequisitionInfoId = $("#hdrawMaterialRequisitionInfoId");
-        //var ddlrmnqty = $("#ddlrmnqty");
-        var ddlqty = $("#ddlqty");
+        var numRequisitonQuantity = $("#numRequisitonQuantity");
         var txtRemarks = $("#txtRemarks");
-        var ddlUnitName = $("#ddlUnitName");
-        var ddlUnitID = $("#ddlUnitID");
-        var ddlRawMaterialList = [];
+        var txtUnitName = $("#txtUnitName");
+        var hdUnitId = $("#hdUnitId");
+        var rawMaterialList = [];
         var searchByAny = $("#searchByAny");
         var searchByAnyy = $("#searchByAnyy");
         var RawMaterialStockQty = $("#RawMaterialStockQty");
@@ -126,6 +125,7 @@
                 theme: 'bootstrap4'
             });
             $("#btnSubmit").hide();
+            $("#spanRawMaterialStockQty").hide();
 
             //LoadDataTableStock();
             //LoadDataTable();
@@ -135,6 +135,9 @@
 
         })
         ddlRawMaterial.change(function () {
+            RawMaterialStockQty.show();
+
+            $("#spanRawMaterialStockQty").show();
 
 
             var data = { RawMaterialId: ddlRawMaterial.val() };
@@ -142,18 +145,17 @@
             $.when(getReqWithData('Html', "Get", "/AgroConfiguration/RawMaterialStockLoadUnitName", data)).then(function (res, status) {
                 consoleLog(res.replace(/['"]+/g, ''));
                 var unit = res.replace(/['"]+/g, '');
-                ddlUnitName.val(res.UnitName);
-                ddlUnitName.val(unit);
+                txtUnitName.val(res.UnitName);
+                txtUnitName.val(unit);
 
             });
             $.when(getReqWithData('Html', "Get", "/AgroConfiguration/RawMaterialStockLoadUnitID", data)).then(function (res, status) {
                 consoleLog(res.replace(/['"]+/g, ''));
                 var unit = res.replace(/['"]+/g, '');
-                ddlUnitID.val(res.UnitIDd);
-                ddlUnitID.val(unit);
+                hdUnitId.val(res.UnitIDd);
+                hdUnitId.val(unit);
 
             });
-
 
             $.when(getReqWithData('Html', "Get", "/AgroConfiguration/GetStockQty", data)).then(function (res, status) {
                 consoleLog(res.replace(/['"]+/g, ''));
@@ -165,34 +167,33 @@
 
 
         $("#addTolist").click(function (e) {
-            //alert();
-            debugger;
+
             e.preventDefault();
 
 
             if (validateAddToList()) {
 
-                if (ddlRawMaterialList.includes(ddlRawMaterial.val())) {
+                if (rawMaterialList.includes(ddlRawMaterial.val())) {
                     toastrErrorAlert("Material Already Exist");
                 }
                 else {
                     var sl = $("#tblRawMaterialRequisiton tbody tr").length;
                     var td1 = "<td class='text-center'><b>" + (sl + 1) + "</b></td>"
                     var td2 = "<td class='text-center'>" + dropDownSelectedText("ddlRawMaterial") + "</td>";
-                    var td3 = "<td class='text-center'>" + ddlUnitName.val() + "</td>";
-                    var td4 = "<td class='text-center QuanityIDCell'>" + ddlqty.val() + "</td>";
+                    var td3 = "<td class='text-center'>" + txtUnitName.val() + "</td>";
+                    var td4 = "<td class='text-center QuanityIDCell'>" + numRequisitonQuantity.val() + "</td>";
                     var td8 = "<td class='text-center' >" + txtRemarks.val() + "</td>";
                     var td5 = "<td class='text-center'><a href='#' class='btn btn-sm btn-danger data-onfly-del'><i class='far fa-trash-alt'></i> Delete</a></td>";
-
                     var td6 = "<td class='text-center hide'>" + ddlRawMaterial.val() + "</td>";
-                    var td7 = "<td class='text-center hide'>" + ddlUnitID.val() + "</td>";
-
+                    var td7 = "<td class='text-center hide'>" + hdUnitId.val() + "</td>";
                     var tr = "<tr>" + td1 + td2 + td3 + td4 +td8+ td5 + td6 + td7 + "</tr>";
 
-
                     $("#tblRawMaterialRequisiton tbody").append(tr);
-                    ddlRawMaterialList.push(ddlRawMaterial.val());
+                    $("#spanRawMaterialStockQty").hide();
+                    rawMaterialList.push(ddlRawMaterial.val());
                     $("#btnSubmit").show();
+                  
+                    clearCtrl();
 
                 }
 
@@ -200,6 +201,16 @@
 
         })
 
+
+        function clearCtrl() {
+            ddlRawMaterial.val("");
+            ddlRawMaterial.trigger("change");
+            txtUnitName.val("");
+            hdUnitId.val("0");
+            txtRemarks.val("");
+            numRequisitonQuantity.val("0");
+            RawMaterialStockQty.val("");
+        }
         function validateAddToList() {
             debugger;
             var isValid = true;
@@ -209,7 +220,7 @@
                 $(".req-ddlRawMaterial").removeClass('hide');
                 isValid = false;
             }
-            if (TryParseInt(ddlqty.val(), 0) <= 0) {
+            if (TryParseInt(numRequisitonQuantity.val(), 0) <= 0) {
                 $(".req-qty").removeClass('hide');
                 isValid = false;
             }
@@ -227,7 +238,7 @@
             var originalQty = RawMaterialStockQty.text();
             var qty = originalQty.replace(/\(|\)/g, '');
             console.log(qty);
-            if (TryParseInt(ddlqty.val()) > qty) {
+            if (TryParseInt(numRequisitonQuantity.val()) > qty) {
                 isValid = true
             }
             return isValid;
@@ -243,9 +254,9 @@
 
             var rId = tds.eq(5).html();
             console.log("rId :" + rId);
-            const mid = ddlRawMaterialList.indexOf(rId);
+            const mid = rawMaterialList.indexOf(rId);
 
-            ddlRawMaterialList.splice(mid, 1);
+            rawMaterialList.splice(mid, 1);
 
             if (bootbox.confirm("Are you sure you want to delete?", function (result) {
                 if (result === true) {
@@ -258,7 +269,8 @@
         })
 
 
-        $("#btnSubmit").click(function () {
+        $("#btnSubmit").click(function (e) {
+            e.preventDefault();
             var info = { RawMaterialRequisitionInfoId: TryParseInt(hdrawMaterialRequisitionInfoId.val(), 0) };
             var details = [];
 
@@ -273,17 +285,17 @@
                 });
             })
 
-            var model = info.rawMaterialRequisitionDetailsDTO = details;
-            console.log(model);
-            var data = { model };
-             $.when(postReqWithToken(dataType.applicationJson, dataType.json, 'POST', '/AgroConfiguration/SaveRequisiton', data, getToken())).then(function (res, status) {
+           info.rawMaterialRequisitionDetailsDTO = details;
+            var data = JSON.stringify({ info });
+            $.when(postReqWithToken(dataType.applicationJson, dataType.json, 'POST', '/AgroConfiguration/SaveRequisition', data, getToken())
+            ).then(function (res, status) {
                             if (res === true) {
-                                //debugger;
+                         
                                 $('.toastrDefaultSuccess').trigger('click');
                                 setTimeout(function () {
                                     redirectPage('@Url.Action("GetRequisition")');
                                 }, 1000);
-                                //resetUI();
+              
                             }
                             else {
                                 $('.toastrDefaultError').trigger('click');
