--- a/ERPWeb/Views/AgroConfiguration/_GetRequisition.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetRequisition.cshtml
@@ -1,1 +1,58 @@
-﻿
+﻿@model IEnumerable<ERPBO.Agriculture.ViewModels.RawMaterialRequisitionInfoViewModel>
+@{
+
+    string badge = string.Empty;
+    int sl = 0;
+}
+
+<table class="table table-bordered table-sm table-striped" id="tblRequsitionInfo">
+    <thead class="btn-dark">
+        <tr class="text-center">
+            <th>#SL</th>
+            <th class="hide"></th>
+            <th>Requsition Code</th>
+            <th>State Status</th>
+            <th>Remarks</th>
+            <th>Requision by </th>
+            <th>Entry Date</th>
+            <th class="action">Actions</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var info in Model)
+        {
+            badge = info.Status == "Pending" ? "badge bg-warning" : (info.Status == "Current" ? "badge bg-primary" : info.Status == "Approved" ? "badge bg-success" : (info.Status == "Decline" ? "badge bg-secondary" : "badge bg-danger"));
+
+            sl = sl + 1;
+            <tr>
+                <td class="text-center text-bold">@sl</td>
+                <td class="hide">@info.RawMaterialRequisitionInfoId</td>
+                <td>@info.RawMaterialRequisitionCode</td>
+
+
+                <td class="text-center" data-val="@info.Status">
+                    <span class="@badge">@info.Status</span>
+                </td>
+                <td class="action">@info.Remarks</td>
+
+                <td>@info.EntryUserId</td>
+                <td>@info.EntryDate.Value.ToString("dd-MMM-yyyy hh:mm tt")</td>
+                <td class="text-center action">
+                    @if (info.Status == "Pendint" || info.Status == "Pending")
+                    {
+                        <a href="@Url.Action("UpdateRequistion", "AgroConfiguration", new { @infoId = info.RawMaterialRequisitionInfoId })" target="_blank" class="btn text-bold btn-sm btn-outline-info" title=""><i class="fas fa-pencil-alt"></i></a>
+                    }
+                    <a href="#" class="btn btn-sm btn-outline-secondary data-item-Details " title="View Details" data-item-Details="@info.RawMaterialRequisitionInfoId"><i class="fas fa-eye"></i></a>
+                </td>
+            </tr>
+        }
+        @if (Model.Count() == 0)
+        {
+            <tr class="text-center empty-row">
+                <td colspan="13">
+                    No data available in table
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
